Bug 135786 - Empty paragraph above table-as-first-section-content on docx export if it contains a comment
Summary: Empty paragraph above table-as-first-section-content on docx export if it con...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: low minor
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
: 136832 (view as bug list)
Depends on:
Blocks: DOCX-Comments
  Show dependency treegraph
 
Reported: 2020-08-15 22:13 UTC by Telesto
Modified: 2023-03-30 06:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.13 KB, application/vnd.oasis.opendocument.text)
2020-08-15 22:13 UTC, Telesto
Details
The example file saved as docx and opened in Word and Writer (153.66 KB, image/png)
2020-09-28 16:44 UTC, NISZ LibreOffice Team
Details
The example file saved to docx with current Writer (5.30 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-09-28 17:21 UTC, NISZ LibreOffice Team
Details
Test file with multiple sections (14.23 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-03-27 14:40 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-15 22:13:16 UTC
Description:
Empty paragraph above table on docx export if it contains a comment

Steps to Reproduce:
1. Open the attached file
2. Save as DOCX
3. File reload

Actual Results:
Empty paragraph above table

Expected Results:
Not so


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.2
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Telesto 2020-08-15 22:13:37 UTC
Created attachment 164337 [details]
Example file
Comment 2 NISZ LibreOffice Team 2020-09-28 16:44:15 UTC
This started in:

Version: 4.3.0.4
Build ID: 62ad5818884a2fc2e5780dd45466868d41009ec0

In 4.2 and before there was no extra paragraph before the table when opening the docx version.

OTOH this is more like an import problem since 4.2 opens docx files from newer versions without an extra starting paragraph.
Just like Word does.
Comment 3 NISZ LibreOffice Team 2020-09-28 16:44:56 UTC
Created attachment 165926 [details]
The example file saved as docx and opened in Word and Writer

Version: 7.1.0.0.alpha0+ (x64)
Build ID: dec9a123867dcd0fea4683beeb3b4b6659f926f3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 4 NISZ LibreOffice Team 2020-09-28 17:20:16 UTC
Bibisected with bibisect-win32-4.3 to:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2e8aad6d45c53d554ccaf26de998ede708cfc289

author	Vinaya Mandke <vinaya.mandke@synerzip.com>	2014-04-18 15:50:51 +0530
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-04-24 12:57:51 +0200

fdo#39056 fdo#75431 Section Properties if section starts with table
Comment 5 NISZ LibreOffice Team 2020-09-28 17:21:06 UTC
Created attachment 165928 [details]
The example file saved to docx with current Writer

Version: 7.1.0.0.alpha0+ (x64)
Build ID: dec9a123867dcd0fea4683beeb3b4b6659f926f3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 6 Justin L 2022-06-24 13:28:52 UTC
A rare situation. Search for "bRemove" to find the relevant code section.
Comment 7 Commit Notification 2023-03-27 13:51:15 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f138e23f61b58857b0e90dc09642ee832af29d4

tdf#135786: DOCX import: remove dummy paragraph before tables with comment

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2023-03-27 14:40:36 UTC
Created attachment 186249 [details]
Test file with multiple sections
Comment 9 NISZ LibreOffice Team 2023-03-28 08:43:08 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4daeb21a5f533144fd6b3bc397a98f37e5b1dd4c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 10 Czeber László Ádám (NISZ) 2023-03-30 06:55:04 UTC
*** Bug 136832 has been marked as a duplicate of this bug. ***