tdf#135786: DOCX import: remove dummy paragraph before tables with comment

Section-starting tables were imported with a section-starting dummy
paragraph, when the tables contain comments. Remove dummy paragraph
by postponing the call of RemoveDummyParaForTableInSection() after
the annotations are processed.

Regression from commit 2e8aad6d45c53d554ccaf26de998ede708cfc289
"fdo#39056 fdo#75431 Section Properties if section starts with table".

Change-Id: I4c566d0adbe16e4f57018301a98db93b37bcd45f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149623
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>